fixtures/python/choke-point/should_fail/env_in_service.py
import os

# This is application code, not boundary/settings
timeout = os.getenv("TIMEOUT", "30")
host = os.environ.get("HOST", "localhost")
port = os.environ["PORT"]
